--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav class="nav-header" id="nav-header">
         <ul>
           <li><a href="#profil">Profil</a></li>
-          <li><a href="#formation">Formations</a></li>
+          <li><a href="#formations">Formations</a></li>
           <li><a href="#competences">Compétences</a></li>
           <li><a href="#projets">Projets</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -29,11 +29,11 @@
 
     <section class="video-section">
       <video id="bg-video" autoplay muted playsinline class="bg-video">
-        <source id="video-source" src="video/video1.mp4" type="video/mp4" />
+        <source id="video-source" src="video/video1.mp4" alt="Video Cybersécurité" type="video/mp4" />
         Votre navigateur ne supporte pas la vidéo HTML5.
       </video>
       <div class="video-overlay">
-        <h2>Nagi Jérémie</h2>
+        <h1>Nagi Jérémie</h1>
         <p>
           Passioné cybersécurité, blockchain, IA et IT en général (texte a
           completer)
@@ -46,29 +46,48 @@
     <main>
       <section class="profil" id="profil">
         <h2>Profil</h2>
-        <img src="photo/profil.jpg" alt="Nagi Jérémie" class="profil-img" />
+        <img src="photo/profil.jpg" alt="Photo de Nagi Jérémie" class="profil-img" />
         <p>
-          Je suis un passionné de cybersécurité avec une solide expérience en
-          administration système et réseau. Mon objectif est de protéger les
-          systèmes informatiques contre les menaces et de garantir la sécurité
-          des données. Je suis professionel et rigoureux, toujours à la
-          recherche de nouvelles connaissances dans le domaine de la sécurité
-          informatique. experience de vie... bla bla bla
+Fasciné par la cybersécurité depuis mon adolescence, j’ai toujours été animé par la curiosité et la passion d’apprendre et d’évoluer. Doté d’une grande ambition,
+ j’ai toujours visé haut. Mon parcours de vie, riche et varié, m’a permis de développer une maturité et une polyvalence rares : expériences militaires et stage
+  commando, vécu sur plusieurs continents, engagement dans le sport automobile de haut niveau – notamment le championnat du monde WEC LMP2 en 2017 comme tire‑man 
+  et responsable refueling. <br>
+  Ces expériences m’ont transmis rigueur, réactivité et gestion des situations critiques, que j’applique aujourd’hui en cybersécurité. Autodidacte, 
+  j’ai développé des compétences en développement (Python, Bash, HTML, CSS, JavaScript), en audit et pentest (Nmap, TCPDump, Hydra, Hashcat, John the Ripper…),
+   en défense des systèmes (SIEM, firewall, Fail2ban, Graylog, Wireshark) ainsi qu’en hardware (conception et assemblage de rigs de minage). <br>
+   Je prépare actuellement un MSc Ingénieur Architecte Système et Réseaux à EPITECH Marseille, spécialisation Cybersécurité, pour donner un cadre professionnel à
+    cette passion et contribuer à des projets ambitieux dans la protection des systèmes et des données. Enthousiaste et motivé, je suis activement à la recherche 
+    d’une alternance à partir de janvier 2026, où je pourrai mettre mes compétences techniques et mon énergie au service de missions stimulantes et innovantes.
         </p>
       </section>
 
 
-            <section class="Formations" id="Formations">
+            <section class="formations" id="formations">
         <h2>Formations</h2>
-        <img src="photo/profil.jpg" alt="Nagi Jérémie" class="profil-img" />
-        <p>
-          Je suis un passionné de cybersécurité avec une solide expérience en
-          administration système et réseau. Mon objectif est de protéger les
-          systèmes informatiques contre les menaces et de garantir la sécurité
-          des données. Je suis professionel et rigoureux, toujours à la
-          recherche de nouvelles connaissances dans le domaine de la sécurité
-          informatique. experience de vie... bla bla bla
-        </p>
+        <h3>Epitech : Msc Ingénieur - Architecte Système d’Information, spécialité Cybersécurité <br> (2023 – 2025)</h3>
+        <h4>Compétences acquises</h4>
+        <ul>
+          <li>Analyse et gestion des risques</li>
+          <li>Sécurité des réseaux et systèmes</li>
+          <li>Détection et réponse aux incidents de sécurité</li>
+          <li>Sécurité des applications et développement sécurisé (DevSecOps)</li>
+          <li>Gestion des identités et des accès</li>
+          <li>Sécurité des infrastructures Cloud</li>
+          <li>Analyse de vulnérabilités et tests d’intrusion</li>
+          <li>Sécurité des données et protection de la vie privée </li>                     
+        </ul>
+        <h4> Objectifs et réalisations : </h4>
+        <ul>
+            <li>Opérer un audit de sécurité complet</li>
+  <li>Appliquer les bases des normes ISO 2700x</li>
+  <li>Protéger un système informatique selon les normes en vigueur</li>
+  <li>Maîtriser les contextes de protection des données et la législation</li>
+</ul>
+
+        
+
+
+
       </section>
 
       <section class="skills" id="competences">
@@ -81,7 +100,7 @@
                 <li>
                   <img
                     src="photo/python.svg"
-                    alt="Nagi Jérémie"
+                    alt="Logo Python"
                     class="profil-img"
                   />
                   Python
@@ -89,7 +108,7 @@
                 <li>
                   <img
                     src="photo/html.svg"
-                    alt="Nagi Jérémie"
+                    alt="Logo HTML"
                     class="profil-img"
                   />
                   HTML
@@ -97,7 +116,7 @@
                 <li>
                   <img
                     src="photo/css.svg"
-                    alt="Nagi Jérémie"
+                    alt="Logo CSS"
                     class="profil-img"
                   />
                   CSS
@@ -105,7 +124,7 @@
                 <li>
                   <img
                     src="photo/js.svg"
-                    alt="Nagi Jérémie"
+                    alt="Logo JavaScript"
                     class="profil-img"
                   />
                   JAVASCRIPT
@@ -121,28 +140,28 @@
                 <li>
                   <img
                     src="photo/linux.svg"
-                    alt="Nagi Jérémie"
+                    alt="Logo Linux"
                     class="profil-img"
                   />
                 </li>
                 <li>
                   <img
                     src="photo/bash1.svg"
-                    alt="Nagi Jérémie"
+                    alt="Logo Bash"
                     class="profil-img"
                   />
                 </li>
                 <li>
                   <img
                     src="photo/WindowsAD.svg"
-                    alt="Nagi Jérémie"
+                    alt="Logo Windows Active Directory"
                     class="profil-img"
                   />
                 </li>
                 <li>
                   <img
                     src="photo/powershell.svg"
-                    alt="Nagi Jérémie"
+                    alt="Logo Powershell"
                     class="profil-img"
                   />
                 </li>
@@ -156,12 +175,12 @@
             </button>
             <div class="accordion-panel">
               <ul>
-                <li> <img src="photo/Nmap.webp" alt="Nagi Jérémie" class="profil-img" /></li>
-                <li> <img src="photo/Tcpdump.svg" alt="Nagi Jérémie" class="profil-img" /></li>
-                <li> <img src="photo/Metasploit.svg" alt="Nagi Jérémie" class="profil-img" /></li>
-                <li> <img src="photo/Hydra.svg" alt="Nagi Jérémie" class="profil-img" /></li>
-                <li> <img src="photo/JTP.png" alt="Nagi Jérémie" class="profil-img" /></li>
-                <li> <img src="photo/hascat.png" alt="Nagi Jérémie" class="profil-img" /></li>
+                <li> <img src="photo/Nmap.webp" alt="Logo Nmap" class="profil-img" /></li>
+                <li> <img src="photo/Tcpdump.svg" alt="Logo Tcpdump" class="profil-img" /></li>
+                <li> <img src="photo/Metasploit.svg" alt="Logo Metasploit" class="profil-img" /></li>
+                <li> <img src="photo/Hydra.svg" alt="Logo Hydra" class="profil-img" /></li>
+                <li> <img src="photo/JTP.png" alt="Logo John The Ripper" class="profil-img" /></li>
+                <li> <img src="photo/hascat.png" alt="Logo Hashcat" class="profil-img" /></li>
             </ul>
             </div>
           </div>
@@ -172,9 +191,9 @@
             </button>
             <div class="accordion-panel">
                             <ul>
-                <li> <img src="photo/Fail2ban_svg.png" alt="Nagi Jérémie" class="profil-img" /></li>
-                <li> <img src="photo/Wireshark_icon_new.png" alt="Nagi Jérémie" class="profil-img" /></li>
-                <li> <img src="photo/Graylog_logo.svg.png" alt="Nagi Jérémie" class="profil-img" /></li>
+                <li> <img src="photo/Fail2ban_svg.png" alt="Logo Fail2ban" class="profil-img" /></li>
+                <li> <img src="photo/Wireshark_icon_new.png" alt="Logo Wireshark" class="profil-img" /></li>
+                <li> <img src="photo/Graylog_logo.svg.png" alt="Logo Graylog" class="profil-img" /></li>
             </div>
           </div>
         </div>
@@ -186,18 +205,37 @@
           <div class="card">
             <h3>Projet 1</h3>
             <ul>
-            <li> <img src="photo/Cyberpong2.jpg" alt="Nagi Jérémie" class="profil-img" /></li>
-                        <li> <img src="photo/Cyberpong7.jpg" alt="Nagi Jérémie" class="profil-img" /></li>
-                        <li> <img src="photo/Cyberpong11.jpg" alt="Nagi Jérémie" class="profil-img" /></li>
-            <p>Description rapide du projet.</p>
-            </ul>
-          </div>
+            <img src="photo/Cyberpong2.jpg" alt="Photo du jeux Cyberpong" class="profil-img" />
+                        <img src="photo/Cyberpong7.jpg" alt="Photo du jeux Cyberpong" class="profil-img" />
+                       <img src="photo/Cyberpong11.jpg" alt="Photo du jeux Cyberpong" class="profil-img" />
+            <h2>CyberPong — Jeu arcade - Thème :Cyber/Pentest (Python)</h2>
+<p>CyberPong réinvente le classique Pong en y ajoutant une couche narrative et technique inspirée de la cybersécurité. Le jeu propose une arène instable, 
+  des virus-débuffs (shrinking, hyper-worm, crazy angles, firewall obstacles…), une interface de type « terminal » simulant scans Nmap/Hydra et une gestion musicale 
+  dynamique selon le niveau. L’implémentation combine animation graphique (module turtle), gestion audio (pygame.mixer), logique de jeu (collisions, niveaux, effets
+   aléatoires) et UI textuelle animée (effet « typing »).</p>
+   <h3>Fonctionnalités clés</h3>
+   <ul>
+<li>Arène dynamique avec évènements (shake, flash, obstacles firewall).</li>
+<li>Système de debuffs progressifs modifiant raquettes, balle et vitesse.</li>
+<li>Séquences d’intro/hack simulées (texte animé, logs d’attaque).</li>
+<li>Audio adaptatif : musiques/effets par niveau et par debuff.</li>
+<li>Gestion du score, niveaux, replay et interface click/drag.</li>
+</ul>
+<h3>Technos & outils</h3>
+<ul>
+  <li>Langage : Python</li>
+  <li>Son : pygame.mixer (musique et effets)</li></ul>
+        </div>
+
           <div class="card">
             <h3>Projet 2</h3>
             <ul>
-            <li> <img src="photo/Convertisseur1.png" alt="Nagi Jérémie" class="profil-img" /></li>
-                        <li> <img src="photo/Convertisseur2.png" alt="Nagi Jérémie" class="profil-img" /></li>
-            <p>Description rapide du projet.</p>
+            <img src="photo/Convertisseur1.png" alt="Photo du convertisseur d'unités" class="profil-img" />
+                        <img src="photo/Convertisseur2.png" alt="Photo du convertisseur d'unités" class="profil-img" />
+            <p>Ce projet est un convertisseur d’unités développé en Python, permettant de transformer facilement des valeurs entre différentes unités de mesure (longueur, masse, température…). 
+              L’application met en pratique mes compétences en programmation Python et en mathématiques, tout en offrant une interface simple et intuitive. Ce convertisseur 
+              peut être utile aux étudiants, lycéens, scientifiques ou toute personne ayant besoin de réaliser rapidement des conversions d’unités. Le projet est en constante 
+              évolution et peut être enrichi avec de nouvelles fonctionnalités ou types de conversions à l’avenir.</p>
             </ul>
           </div>
         </div>
@@ -205,7 +243,7 @@
 
 <section class="contact" id="contact">
   <h2>Contact</h2>
-  <form class="contact-form" action="mailto:jeremie.nagi@epitec.eu" method="POST" enctype="text/plain">
+  <form class="contact-form" action="contact.php" method="POST">
     <div class="form-row">
       <input type="text" name="prenom" placeholder="Prénom" required />
       <input type="text" name="nom" placeholder="Nom" required />
