--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<h1>Nagi Jérémie — Portfolio Cybersécurité</h1>
+<h1>Nagi Jérémie — Portfolio Cyber</h1>
 
   <header>
     <nav>
