--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         Ces expériences m’ont transmis rigueur, réactivité et gestion des situations critiques, que j’applique aujourd’hui en cybersécurité. Autodidacte, j’ai développé des compétences en développement (Python, Bash, HTML, CSS, JavaScript), en audit et pentest, en défense des systèmes ainsi qu’en hardware.  
         Je prépare actuellement un MSc Ingénieur Architecte Système et Réseaux à EPITECH Marseille, spécialisation Cybersécurité. Enthousiaste et motivé, je suis activement à la recherche d’une alternance à partir de janvier 2026.
       </p>
+      <a href="cv.pdf" download>Télécharger mon CV</a>
     </section>
-
 
     <section class="fade-in" id="formation">
       <h2>Formations</h2>
