ajout bande :  En construction

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
 
 <body class="bg-black text-green-400 font-mono">
 
+<div class="bg-yellow-500/20 border-b border-yellow-400 text-yellow-300 text-center py-2 font-bold animate-pulse">
+  🚧 Ce portfolio est en phase de construction 🚧
+</div>
 
 
   <header>
