--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nagi Jérémie Cybersécurité</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" type="image/png" href="photo/cyber_icon.png">
+
 </head>
 
 <audio id="bg-music" loop>
