--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nagi Jérémie Cybersécurité</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="icon" type="image/png" href="photo/cyber_icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="photo/cyber_icon.png">
 
 </head>
 
@@ -14,7 +14,8 @@
   <source src="audio/audio.mp3">
 </audio>
 
-<div class="fixed bottom-5 right-5 flex items-center gap-2 bg-black/70 border border-green-400 px-4 py-2 rounded-xl shadow-lg z-50">
+<div
+  class="fixed bottom-5 right-5 flex items-center gap-2 bg-black/70 border border-green-400 px-4 py-2 rounded-xl shadow-lg z-50">
   <button id="toggle-sound" class="text-green-300 hover:text-yellow-300 transition">
     🎧 Activer le son
   </button>
@@ -44,9 +45,9 @@
 
 <body class="bg-black text-green-400 font-mono">
 
-<div class="bg-yellow-500/20 border-b border-yellow-400 text-yellow-300 text-center py-2 font-bold animate-pulse">
-  🚧 Ce portfolio est en phase de construction 🚧
-</div>
+  <div class="bg-yellow-500/20 border-b border-yellow-400 text-yellow-300 text-center py-2 font-bold animate-pulse">
+    🚧 Ce portfolio est en phase de construction 🚧
+  </div>
 
 
   <header>
