correction orthographe et syntaxe section profil et projets

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             certificat.
           </p>
           <p class="text-center mb-5">
-            Animé par la passion de réussir, ma curiosité et ma volonté me permettent d'évoluer rapidement.
+            Animé par la passion de réussir; ma curiosité et ma volonté me permettent d'évoluer rapidement.
             Je peux apporter un fort esprit d’équipe, une grande maturité et une rigueur professionnelle.
             Je suis actuellement à la recherche d’une alternance ou d’un stage dans tous les domaines de l’IT,
             disponible à partir de janvier 2026 pour une durée de 33 mois.
@@ -374,7 +374,7 @@
             </h3>
 
             <p class="text-center mb-5">
-              Platino est un Job Board complet, avec une API CRUD backend qui permet de Create Read Update and Delete
+              Platino est un Job Board complet, avec une API CRUD backend qui permet de Create Read Update et Delete
               des
               utilisateurs,
               annonces...
