correction en-tête construction

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body class="bg-black text-green-400 font-mono">
 
   <div class="bg-yellow-500/20 border-b border-yellow-400 text-yellow-300 text-center py-2 font-bold animate-pulse">
-    🚧 Ce portfolio est en phase de construction : de nombreux projets et compétences sont manquants. Revenez après le 1er janvier 2026. 🚧
+    🚧 Ce portfolio est en phase de construction : de nombreux projets, formations et compétences sont manquants. Revenez après le 1er janvier 2026. 🚧
   </div>
 
 
